# aos-lib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/aos_lib/: constants.py  rom.py  stream.py
src/aos_lib/structs/: area.py  common_types.py  item_table.py  lzss.py  rom_object.py  room.py  string.py  tileset.py
