[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "aos-lib"
requires-python = ">= 3.12"
dependencies = [
    "construct>=2.10.70"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/aos_lib/version.py"

[tool.ruff]
lint.select = ["F", "E", "W", "I", "UP"]
line-length = 110
